--- a/src/index.css
+++ b/src/index.css
@@ -34,33 +34,9 @@
     font-weight: 600;
     letter-spacing: 1px;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-
-    -webkit-animation: alternate 3s infinite;
-    animation: alternate 3s infinite;
     
 }  
 
-@-webkit-keyframes alternate {
-    0% {
-      -webkit-transform: translate(-50%, -50%) scale(1);
-      transform: translate(-50%, -50%) scale(1);
-    }
-    100% {
-      -webkit-transform: translate(-50%, -50%) scale(1.1);
-      transform: translate(-50%, -50%) scale(1.1);
-    }
-  }
-  
-  @keyframes alternate {
-    0% {
-      -webkit-transform: translate(-50%, -50%) scale(1);
-      transform: translate(-50%, -50%) scale(1);
-    }
-    100% {
-      -webkit-transform: translate(-50%, -50%) scale(1.1);
-      transform: translate(-50%, -50%) scale(1.1);
-    }
-  }
 
   .image-container {
     position: relative;
@@ -68,78 +44,36 @@
     height: 100vh;
   }
   
-  .image-container img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    opacity: 0;
-    transition: opacity 3s ease-in-out;
-  }
+    .image-container img {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        opacity: 0;
+        /* transition: opacity 5s ease-in; */
+        /* add color to transition */
+        transition: opacity 1s ease-in-out;
+    }
   
   .image-container img.show {
     opacity: 1;
   }
   
-  .image-container img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    opacity: 0;
-    transition: opacity 3s ease-in-out;
-  }
   
-  .image-container img.show {
-    opacity: 1;
-  }
-  
-  .image-container img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    opacity: 0;
-    transition: opacity 3s ease-in-out;
-  }
-  
-  .image-container img.show {
-    opacity: 1;
-  }
-  
-  .image-container img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    opacity: 0;
-    transition: opacity 3s ease-in-out;
-  }
-  
-  .image-container img.show {
-    opacity: 1;
-  }
-  
-  .image-container img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    opacity: 0;
-    transition: opacity 3s ease-in-out;
-  }
-  
-  .image-container img.show {
-    opacity: 1;
-  }
-  
-  .image-container
 
+  /* responsive */
 
-.image-container img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    opacity: 0;
-    transition: opacity 3s ease-in-out;
-  }
-  
-  .image-container img.show {
-    opacity: 1;
-  }
-  
+    @media (max-width: 768px) {
+        .hello {
+        font-size: 1.5rem;
+        display: flex;
+        margin-top: 150px;;
+        text-wrap: wrap;
+        }
+        .homepage {
+        height: 100vh;
+        }
+    }
+    
